fix tariff design

--- a/common/scss/design1/ui_pricing_box.scss
+++ b/common/scss/design1/ui_pricing_box.scss
@@ -6,12 +6,12 @@
 .price-list {
   padding: 25px 0px;
   text-align: center;
-  margin: 0px -4%;
 }
 
 .price_col {
-  width: 30%;
-  margin: 0px 10px;
+  width: 32%;
+  margin: 0px 0.66%;
+  padding: 0;
   text-align: center;
   background-color: #f2fafe;
   display: inline-block;
