--- a/common/scss/design1/ui_input.scss
+++ b/common/scss/design1/ui_input.scss
@@ -1,3 +1,7 @@
+select {
+  color: #685563;
+}
+
 input[type="text"], input[type="password"], input[type="email"], textarea {
     border: 1px solid #e5d4c2;
     -webkit-border-radius: 4px;
