--- a/server/templates/admin/login.jade
+++ b/server/templates/admin/login.jade
@@ -8,12 +8,12 @@ html
       .container
         .tab-container.col-xs-12.col-sm-8.col-md-6.col-sm-offset-2.col-md-offset-3.auth-form
           .tab-body.boxed
-            form(role='form')
+            form(role='form', onsubmit='logIn()')
               div
                   include ./../partial/alert.jade
                   .form-group
                     input#password.form-control.input-lg(name='password', type='password', placeholder='Пароль')
-                  .btn.btn-primary.btn-block(onclick='logIn()') Отправить
+                  button.btn.btn-primary.btn-block Отправить
 
     script(src="/public/ajax.js")
     script.
