--- a/server/templates/paymentTariff.jade
+++ b/server/templates/paymentTariff.jade
@@ -45,12 +45,13 @@ html(lang='en')
                         input(type='hidden', name='label', value='#{currentTariff.name == tariff ? currentTariff.name + "::" + currentTariff.duration + "::" + user.id : tariff + "::" + tariffs[tariff].prices[0].time + "::" + user.id}')
                         input(type='hidden', name='targets', value='#{"Тариф " + tariffs[tariff].name}')
                         input(type='hidden', name='quickpay-form', value='donate')
+                        input(type='hidden', name='pymentType', value='')
                         input(type='hidden', name='sum', value='#{currentTariff.name == tariff ? currentTariff.price : tariffs[tariff].prices[0].price}')
                         input.btn.btn-danger(type='submit', value='Яндекс')
 
                     form.interkassa(method='POST', action='https://sci.interkassa.com/', enctype='utf-8')
                         input(name='ik_co_id', type='hidden', value='#{interkassa.ik_co_id}')
-                        input(name='ik_pm_no', type='hidden', value='#{currentTariff.name == tariff ? currentTariff.name + "::" + currentTariff.duration + "::" + user.id : tariff + "::" + tariffs[tariff].prices[0].time + "::" + user.id}')
+                        input(name='ik_pm_no', type='hidden', value='#{currentTariff.name == tariff ? currentTariff.name + "-" + currentTariff.duration + "-" + user.id : tariff + "-" + tariffs[tariff].prices[0].time + "-" + user.id}')
                         input(name='ik_am', type='hidden', value='#{currentTariff.name == tariff ? currentTariff.price : tariffs[tariff].prices[0].price}')
                         input(name='ik_cur', type='hidden', value='#{interkassa.ik_cur}')
                         input(name='ik_desc', type='hidden', value='#{"Тариф " + tariffs[tariff].name}')
