--- a/server/templates/payments/yandex.jade
+++ b/server/templates/payments/yandex.jade
@@ -7,6 +7,7 @@ form#yandex.hide(method='POST', action='#{payments.yandex.action}')
         input(type='hidden', name='label', value='#{payments.yandex.label}')
         input(type='hidden', name='targets', value='#{payments.yandex.targets}')
         input(type='hidden', name='quickpay-form', value='donate')
+        input(type='hidden', name='paymentType', value='')
         input(type='hidden', name='sum', value='#{payments.yandex.sum}', data-type='number')
         label
           input(type='radio', onclick='{clickYandex("money")}', name='paymentType', value='PC')
