choosing tariff on click

--- a/server/templates/paymentTariff.jade
+++ b/server/templates/paymentTariff.jade
@@ -60,4 +60,6 @@ html(lang='en')
                         input.btn.btn-danger(type='submit', value='Интеркасса')
 
       input#userId(type='hidden', value='#{user.id}')
+
+      script(src="/public/ajax.js")
       script(src="/public/client/js/tariffPayment.js")
