--- a/server/templates/paymentTariff.jade
+++ b/server/templates/paymentTariff.jade
@@ -47,6 +47,7 @@ html(lang='en')
                         input(type='hidden', name='quickpay-form', value='donate')
                         input(type='hidden', name='pymentType', value='')
                         input(type='hidden', name='sum', value='#{currentTariff.name == tariff ? currentTariff.price.rub : tariffs[tariff].prices[0].price.rub}')
+                        input(type='hidden', name='successURL', value='#{yandex.successURL}')
                         input.btn.btn-danger(type='submit', value='Яндекс')
 
                     form.interkassa(method='POST', action='https://sci.interkassa.com/', enctype='utf-8')
@@ -57,6 +58,7 @@ html(lang='en')
                         input(name='ik_desc', type='hidden', value='#{"Тариф " + tariffs[tariff].name}')
                         input(name='ik_ia_u', type='hidden', value='#{interkassa.ik_ia_u}')
                         input(name='ik_ia_m', type='hidden', value='#{interkassa.ik_ia_m}')
+                        input(name='ik_suc_u', type='hidden', value='#{interkassa.ik_suc_u}')
                         input.btn.btn-danger(type='submit', value='Интеркасса')
 
       input#userId(type='hidden', value='#{user.id}')
