--- a/server/templates/payments/yandex.jade
+++ b/server/templates/payments/yandex.jade
@@ -9,6 +9,7 @@ form#yandex.hide(method='POST', action='#{payments.yandex.action}')
         input(type='hidden', name='quickpay-form', value='donate')
         input(type='hidden', name='paymentType', value='')
         input(type='hidden', name='sum', value='#{payments.yandex.sum}', data-type='number')
+        input(type='hidden', name='successURL', value='#{payments.yandex.successURL}')
         label
           input(type='radio', onclick='{clickYandex("money")}', name='paymentType', value='PC')
           |                     Яндекс.Деньгами
