--- a/server/templates/payments/interkassa.jade
+++ b/server/templates/payments/interkassa.jade
@@ -7,4 +7,5 @@ form#interkassa.hide(name='payment', method='post', action='https://sci.interkas
     input(name='ik_desc', type='hidden', value='#{payments.interkassa.ik_desc}')
     input(name='ik_ia_u', type='hidden', value='#{payments.interkassa.ik_ia_u}')
     input(name='ik_ia_m', type='hidden', value='#{payments.interkassa.ik_ia_m}')
+    input(name='ik_suc_u', type='hidden', value='#{payments.interkassa.ik_suc_u}')
     input.btn.btn-danger.btn-lg(type='submit', value='Оплатить')
