--- a/common/scss/design2/ui_navigation.scss
+++ b/common/scss/design2/ui_navigation.scss
@@ -58,6 +58,7 @@
         font-weight: 100;
         letter-spacing: -1px;
         color: #8e8071;
+        border-radius: 0;
 
         &:hover {
           background: #f8f3f0;
