--- a/common/scss/design2/ui_table.scss
+++ b/common/scss/design2/ui_table.scss
@@ -83,7 +83,7 @@
         width: 40px;
         height: 40px;
         line-height: 40px;
-        background: #8d7f70;
+        background: #94BD81;
 
         span {
           display: inline-block;
@@ -105,12 +105,12 @@
 
         &:hover {
           color: #fff;
-          background: #e86741;
+          background: #F0AD4E;
         }
 
         &.page_current {
           color: #fff;
-          background: #e86741;
+          background: #F0AD4E;
         }
       }
     }
