--- a/server/templates/paymentTariff.jade
+++ b/server/templates/paymentTariff.jade
@@ -59,6 +59,7 @@ html(lang='en')
                         input(name='ik_ia_u', type='hidden', value='#{interkassa.ik_ia_u}')
                         input(name='ik_ia_m', type='hidden', value='#{interkassa.ik_ia_m}')
                         input(name='ik_suc_u', type='hidden', value='#{interkassa.ik_suc_u}')
+                        input(name='ik_suc_m', type='hidden', value='#{interkassa.ik_suc_m}')
                         input.btn.btn-danger(type='submit', value='Интеркасса')
 
       input#userId(type='hidden', value='#{user.id}')
