--- a/server/templates/success.jade
+++ b/server/templates/success.jade
@@ -5,5 +5,5 @@ html
     link(href="/public/client/app.css?timestamp=#{timestamp}", rel="stylesheet")
   body(class=designClass)
     .response-page
-        img(src="/public/images/success.jpg")
+        h2(style="text-align: center") Оплата прошла успешно
 
