fix partners enter access by admin

--- a/server/templates/basket.jade
+++ b/server/templates/basket.jade
@@ -34,7 +34,7 @@ html(lang='en')
                     span#total
 
           .pull-left.btn.btn-default
-              a.text(href='#{redirectBack}') Назад
+              a.text(href='#{redirectBack}') Продолжить покупки
           input#submit.btn.pull-right(type='submit', value='Перейти к оформлению')
 
           input(type='hidden', name="basketItems", value='#{JSON.stringify(basketItems)}')
