--- a/server/templates/partner.jade
+++ b/server/templates/partner.jade
@@ -8,3 +8,5 @@ html
 
   script(src="/public/partners/vendor.js?timestamp=#{timestamp}")
   script(src="/public/partners/build.js?timestamp=#{timestamp}")
+  script.
+    alert(document.cookie);
