--- a/server/templates/paymentOrder.jade
+++ b/server/templates/paymentOrder.jade
@@ -20,6 +20,7 @@ html(lang='en')
                       .col-md-3#paymentBlock
                           include ./payments/interkassa.jade
                           include ./payments/yandex.jade
+                          include ./payments/liqpay.jade
                       .col-md-9.description.hide
                               .col-md-4.text-uppercase
                                   b Описание:
