--- a/server/templates/payments/liqpay.jade
+++ b/server/templates/payments/liqpay.jade
@@ -1,4 +1,5 @@
-form#liqpay-btn(method='POST', action='https://www.liqpay.com/api/checkout', style='display:none;')
-      input(type='hidden', name='data', value='#{payment.data}')
-      input(type='hidden', name='signature', value='#{payment.signature}')
+
+form#liqpay.hide(method='POST', action='https://www.liqpay.com/api/checkout')
+      input(type='hidden', name='data', value='#{payments.liqpay.data}')
+      input(type='hidden', name='signature', value='#{payments.liqpay.signature}')
       input(type='image', src='//static.liqpay.com/buttons/p1ru.radius.png', name='btn_text')
