start two-level

--- a/server/templates/client.jade
+++ b/server/templates/client.jade
@@ -7,7 +7,7 @@ html
     link(href="/public/client/app.css?timestamp=#{timestamp}", rel="stylesheet")
   body(class=designClass)
     #app-container
-  script(src="/public/clientLog.js")
+  //script(src="/public/clientLog.js")
   script(src="/public/client/vendor.js?timestamp=#{timestamp}")
   script(src="/public/client/build.js?timestamp=#{timestamp}")
 
