--- a/client/src/scss/app.scss
+++ b/client/src/scss/app.scss
@@ -13,6 +13,10 @@
   list-style: none;
 }
 
+.profile-form {
+  z-index: 10!important;
+}
+
 /*---------------------------for basket---------------------------*/
 
 
