--- a/server/templates/basketPending.jade
+++ b/server/templates/basketPending.jade
@@ -57,7 +57,7 @@ html(lang='en')
               .text-danger.small.pull-right *Поля обязательные для заполнения
               br
 
-          input.btn.pull-right(type='submit', value='Офомить')
+          input.btn.pull-right(type='submit', value='Оформить')
 
           input(type='hidden', name="basketItems", value='#{JSON.stringify(basketItems)}')
           input(type='hidden', name="currency", value='#{JSON.stringify(currency)}')
