--- a/server/templates/paymentOrder.jade
+++ b/server/templates/paymentOrder.jade
@@ -21,6 +21,7 @@ html(lang='en')
                           include ./payments/interkassa.jade
                           include ./payments/yandex.jade
                           include ./payments/liqpay.jade
+                          include ./payments/paypal.jade
                       .col-md-9.description.hide
                               .col-md-4.text-uppercase
                                   b Описание:
