--- a/server/templates/payments/paypal.jade
+++ b/server/templates/payments/paypal.jade
@@ -1,2 +1,2 @@
-a#paypal(href='#{payments.paypal.href}')
+a#paypal.hide(href='#{payments.paypal.href}')
     img(src='https://www.paypalobjects.com/webstatic/en_US/i/buttons/buy-logo-large.png')
