--- a/server/templates/admin/login.jade
+++ b/server/templates/admin/login.jade
@@ -1,7 +1,7 @@
 html
   head
       meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
-      link(href="/public/orders/app.css?timestamp=#{timestamp}", rel="stylesheet")
+      link(href="/public/client/app.css?timestamp=#{timestamp}", rel="stylesheet")
   body(class=designClass)
     script(src="/public/partners/vendor.js?timestamp=#{timestamp}")
     div
