fix payment style

--- a/server/templates/paymentOrder.jade
+++ b/server/templates/paymentOrder.jade
@@ -1,6 +1,8 @@
 doctype html
 html(lang='en')
   head
+      title
+        | Заказ № #{order.id}
     meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
     link(href="/public/client/app.css?timestamp=#{timestamp}", rel="stylesheet")
   body(class=designClass)
@@ -11,12 +13,17 @@ html(lang='en')
                               | Оплата заказа
                       div
                           .content-step.row
-                              .order-num.title
+                              .order-num.title.col-md-12
                                   b ID заказа:
                                   | #{order.id}
-                              div
+                              .col-md-12
                                   h2 Варианты оплаты:
-                              div#container
+                              ul#container.nav.nav-pills
+                      .col-md-9.description.hide
+                          .col-md-2.text-uppercase
+                              b Описание:
+                              span
+                          .col-md-8#description
                       .col-md-3#paymentBlock
                           if payments.interkassa
                             include ./payments/interkassa.jade
@@ -26,11 +33,6 @@ html(lang='en')
                             include ./payments/liqpay.jade
                           if payments.paypal
                             include ./payments/paypal.jade
-                      .col-md-9.description.hide
-                              .col-md-4.text-uppercase
-                                  b Описание:
-                                  span
-                              .col-md-8#description
 
 
       input.form-control(type='hidden', name='payments', value='#{JSON.stringify([payments])}')
