fix payment style

--- a/server/templates/paymentOrder.jade
+++ b/server/templates/paymentOrder.jade
@@ -18,7 +18,8 @@ html(lang='en')
                                   | #{order.id}
                               .col-md-12
                                   h2 Варианты оплаты:
-                              ul#container.nav.nav-pills.col-md-12
+                              .col-md-12
+                                  ul#container.nav.nav-pills.col-md-12
                       .col-md-9.description.hide
                           .col-md-2.text-uppercase
                               b Описание:
